tests/errors/cpp/expand/merge-alone-functionlike.h
#define EXPANDME1(x) ##
EXPANDME1(0)
